<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.widget.MainActivity">

    <item android:id="@+id/action_out_group"
        android:title="@string/out_group"
        android:icon="@mipmap/ic_out_group"
        app:showAsAction="never" />

    <item android:id="@+id/action_img"
        android:title="@string/user_img"
        android:icon="@mipmap/ic_new_head"
        app:showAsAction="never" />

    <item android:id="@+id/action_pwd"
        android:title="@string/user_pwd"
        android:icon="@mipmap/ic_new_pwd"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@mipmap/ic_logout"
        app:showAsAction="never" />
</menu>
