<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/add_comment_layout"
        android:layout_below="@+id/RV_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center">

        <EditText
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/post_title_hint"
            android:inputType="text"
            android:maxLines="3"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/post_content"
            android:layout_below="@id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/post_content_hint"
            android:inputType="textMultiLine"
            android:maxLines="30"
            android:minLines="10"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textColorHint="@color/secondary_text" />
        <!--确认发帖-->
        <Button
            android:id="@+id/btn_add_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_content"
            android:background="@color/primary"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:onClick="addPost" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>