<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:layout_height="200dp">

        <!-- app:expandedTitleMarginStart="10dp" 设置扩张时候(还没有收缩时)title离屏幕左边的距离
             app:contentScrim="?attr/colorPrimary" 设置当完全CollapsingToolbarLayout折叠(收缩)后的背景颜色 -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            app:expandedTitleMarginEnd="10dp"
            app:expandedTitleMarginStart="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleGravity="bottom">

            <!-- layout_collapseMode(折叠模式)-有两个值:
                 1.parallax:在内容滚动时，CollapsingToolbarLayout中的View（比如ImageView)也可以同时滚动，
                        实现视差滚动效果，通常和layout_collapseParallaxMultiplier(设置视差因子)搭配使用。
                 2.pin:当CollapsingToolbarLayout完全收缩后，Toolbar还可以固定在屏幕上。-->
            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_test_img"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                android:background="@mipmap/user_bg" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/header_image"
                android:src="@drawable/protrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/primary_light"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="3dp"
                android:onClick="modifyImg" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="invisible" />

        <!--原密码层-->
        <FrameLayout
            android:id="@+id/old_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:visibility="invisible" >

            <!--密码图标-->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/login_password" />

            <!--密码框-->
            <EditText
                android:id="@+id/old_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingRight="60dp"
                android:maxLength="25"
                android:paddingLeft="30dp"
                android:hint="@string/old_password"
                android:textColorLink="@color/primary_light"
                android:textColorHint="@color/secondary_text">
            </EditText>

            <!--显示密码-->
            <Button
                android:id="@+id/bt_pwd_eye"
                android:layout_width="25dp"
                android:background="@drawable/button_eye"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:visibility="visible"
                android:layout_height="15dp" />
        </FrameLayout>

        <!--新密码层-->
        <FrameLayout
            android:id="@+id/new_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:visibility="invisible">

            <!--密码图标-->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/login_password" />

            <!--密码框-->
            <EditText
                android:id="@+id/new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingRight="60dp"
                android:maxLength="25"
                android:paddingLeft="30dp"
                android:hint="@string/new_password"
                android:textColorLink="@color/primary_light"
                android:textColorHint="@color/secondary_text">
            </EditText>
        </FrameLayout>

        <Button
            android:id="@+id/btn_sure"
            android:text="@string/sure_pwd"
            android:layout_marginBottom="20dp"
            android:background="@color/danger"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_pwd"
            android:text="@string/user_pwd"
            android:layout_marginBottom="20dp"
            android:background="@color/danger"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_img"
            android:text="@string/user_img"
            android:layout_marginBottom="20dp"
            android:background="@color/danger"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_logout"
            android:text="@string/logout"
            android:layout_marginBottom="20dp"
            android:background="@color/danger"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>