<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/appbar"
            layout="@layout/toolbar" />
        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            tools:ignore="UselessParent">
            <!--用户名层-->
            <FrameLayout
                android:id="@+id/name_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center" >

                <!--用户图标-->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@mipmap/ic_user" />

                <!--用户名框-->
                <EditText
                    android:id="@+id/login_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:paddingRight="60dp"
                    android:paddingLeft="30dp"
                    android:maxLength="25"
                    android:hint="@string/input_name"
                    android:textColorLink="@color/primary_light"
                    android:textColorHint="@color/secondary_text">
                </EditText>
            </FrameLayout>

            <!--密码层-->
            <FrameLayout
                android:id="@+id/password_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_layout"
                android:layout_marginTop="15dp"
                android:gravity="center" >

                <!--密码图标-->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@mipmap/ic_password" />

                <!--密码框-->
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingRight="60dp"
                    android:maxLength="25"
                    android:paddingLeft="30dp"
                    android:hint="@string/input_password"
                    android:textColorLink="@color/primary_light"
                    android:textColorHint="@color/secondary_text">
                </EditText>

                <!--显示密码-->
                <Button
                    android:id="@+id/bt_pwd_eye"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@mipmap/ic_eye"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="10dp"
                    android:visibility="visible" />
            </FrameLayout>

            <!--注册密码层-->
            <FrameLayout
                android:id="@+id/register_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:visibility="visible">

                <!--密码图标-->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@mipmap/ic_password" />

                <!--密码框-->
                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password2"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingLeft="30dp"
                    android:paddingRight="60dp"
                    android:textColorHint="@color/secondary_text"
                    android:textColorLink="@color/primary_light" />
            </FrameLayout>

            <!--验证码层-->
            <FrameLayout
                android:id="@+id/prove_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_layout"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:visibility="visible">

                <!--验证码图标-->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@mipmap/ic_prove" />

                <!--验证码输入框-->
                <EditText
                    android:id="@+id/et_prove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="60dp"
                    android:hint="@string/input_prove" />

                <!--验证码图片-->
                <ImageView
                    android:id="@+id/prove_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginRight="4dp"
                    android:onClick="refresh"/>
            </FrameLayout>

            <!--登录按钮-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/prove_layout"
                android:layout_marginTop="30dp"
                android:background="@color/primary"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="16sp" />

            <ProgressBar
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="30dp"
                android:id="@+id/progressBar"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <!--注册-->
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/btn_login"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:text="@string/register"
                android:textSize="16sp" />

            <!--返回-->
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/btn_login"
                android:layout_below="@id/btn_login"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:gravity="right|center_vertical"
                android:text="@string/back"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>